
    YARN-5001. Aggregated Logs root directory is created with wrong group if
    nonexistent (Haibo Chen via jlowe)

    YARN-5837. NPE when getting node status of a decommissioned node after an
    RM restart (Robert Kanter via jlowe)

    YARN-4355. NPE while processing localizer heartbeat. Contributed by
    Varun Saxena & Jonathan Hung

Release 2.7.3 - 2016-08-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-4287. Capacity Scheduler: Rack Locality improvement. (Nathan Roberts via wangda)

    YARN-4492. Add documentation for preemption supported in Capacity
    scheduler (Naganarasimha G R via jlowe)

    YARN-3404. Display queue name on application page. (Ryu Kobayashi via jianhe)

    YARN-4653. Document YARN security model from the perspective of
    Application Developers. (Steve Loughran via jianhe)

    YARN-4761. NMs reconnecting with changed capabilities can lead to wrong cluster
    resource calculations on fair scheduler. (Sangjin Lee via zxu)

  OPTIMIZATIONS

  BUG FIXES

    YARN-4706. UI Hosting Configuration in TimelineServer doc is broken. (Akira AJISAKA via gtcarrera9)

    YARN-4326. Fix TestDistributedShell timeout as AHS in MiniYarnCluster no longer 
    binds to default port 8188. (Meng Ding via wangda)

    YARN-4347. Resource manager fails with Null pointer exception. (Jian He via wangda)

    YARN-4374. RM capacity scheduler UI rounds user limit factor (Chang Li via
    jlowe)

    YARN-3849. Too much of preemption activity causing continuos killing of containers 
    across queues. (Sunil G via wangda)

    YARN-3769. Consider user limit when calculating total pending resource for 
    preemption policy in Capacity Scheduler. (Eric Payne via wangda)

    YARN-4344. NMs reconnecting with changed capabilities can lead to wrong
    cluster resource calculations (Varun Vasudev via jlowe)

    YARN-4365. FileSystemNodeLabelStore should check for root dir existence on
    startup (Kuhu Shukla via jlowe)
